tests/js_error/stack_trace/dynamic_import_module.exp
Error: test
  at bar (/Users/hanshalverson/Documents/brimstone/tests/js_error/stack_trace/script_top_level_error.js:2:9)
  at <module> (/Users/hanshalverson/Documents/brimstone/tests/js_error/stack_trace/script_top_level_error.js:5:1)
  at <anonymous> (<native>)
