tests/js_error/stack_trace/dynamic_import_module.js
async function foo() {
  await import('./script_top_level_error.js');
}

await foo();